@@ -1,3 +1,10 @@
+2022-07-08T16:21:04Z:
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 71 107 / 72 108
+* notice: next accum: outdated-unq outdated-all / unq all: 71 107 / 73 109
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-08]
+
 2022-07-01T16:20:29Z:
 * notice: last 14d: unq all: 1 1
 * notice: prev accum: outdated-unq outdated-all / unq all: 70 106 / 71 107
